--- a/integrations/esri-sceneview-wasm/New-Esri-Demo/index.html
+++ b/integrations/esri-sceneview-wasm/New-Esri-Demo/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <meta charset="utf-8" />
-  <meta http-equiv="origin-trial" content="AuIOI30TB29gw4buNQFFWNexGiDwI8ynu05FxU2JLMIXTBq4Xov54vbmoDP9eKTZCzJpays+49NNCVwGhASptAUAAABgeyJvcmlnaW4iOiJodHRwOi8vbG9jYWxob3N0OjgwMDAiLCJmZWF0dXJlIjoiVW5yZXN0cmljdGVkU2hhcmVkQXJyYXlCdWZmZXIiLCJleHBpcnkiOjE2Mzk1MjYzOTl9">
   <meta name="viewport" content="initial-scale=1,width=device-width" />
-  <meta http-equiv="origin-trial" content="AvcnlD3Jh74eZ6jq82HUr96gI1vygNstBwiSJAdv9I4zH+0grab5BJHIjLVz2QoZWgpgp+yKFnX7Iyhhd5IJSgkAAAB7eyJvcmlnaW4iOiJodHRwczovL3d3dy5ldWNsaWRlb24uY29tOjQ0MyIsImZlYXR1cmUiOiJVbnJlc3RyaWN0ZWRTaGFyZWRBcnJheUJ1ZmZlciIsImV4cGlyeSI6MTYzOTUyNjM5OSwiaXNTdWJkb21haW4iOnRydWV9">
   <title>ESRI City Viewer</title>
 
-  <link rel="stylesheet" href="https://js.arcgis.com/4.20/esri/themes/dark/main.css" crossorigin/>
-  <script src="https://js.arcgis.com/4.20/" crossorigin></script>
+  <link rel="stylesheet" href="https://www.euclideon.com/demo/esri_city_viewer/arcgis_js/4.20/esri/themes/dark/main.css" />
+  <script src="https://www.euclideon.com/demo/esri_city_viewer/arcgis_js/4.20/init.js"></script>
 
   <link rel="stylesheet" href="./css/main.css" />
   <script src="./lib/cameraControl.js"></script>
@@ -139,17 +137,9 @@
       var buildingsLayer;
       var lightsLayer;
       var treesLayer;
-
-      require(["esri/config"], 
-        function(esriConfig) {
-          // esriConfig.apiKey = "AAPK354e42392ee54124b9ae95596b457633LgZlrhexVdoPtOKHCAzeQAyPO5d7RNZFK6pYGFS2vGFzdAzdZiLH5aFxvSfPref8";
-          esriConfig.request.trustedServers.push("https://www.arcgis.com");
-          esriConfig.request.trustedServers.push("https://www.euclideon.com");
-          esriConfig.request.trustedServers.push("http://localhost:8000");
-        }
-      );
       
       require([
+        "esri/config",
         "esri/Map",
         "esri/Viewpoint",
         "esri/views/SceneView",
@@ -159,10 +149,9 @@
         "esri/widgets/Legend",
         "esri/widgets/Expand",
         "esri/layers/FeatureLayer",
-        "esri/layers/SceneLayer",
-        "esri/symbols/ExtrudeSymbol3DLayer",
-        "esri/symbols/WebStyleSymbol"
+        "esri/symbols/ExtrudeSymbol3DLayer"
       ], function(
+        esriConfig,
         Map,
         Viewpoint,
         SceneView,
@@ -172,10 +161,13 @@
         Legend,
         Expand,
         FeatureLayer,
-        SceneLayer,
-        ExtrudeSymbol3DLayer,
-        WebStyleSymbol
+        ExtrudeSymbol3DLayer
       ) {
+        esriConfig.request.trustedServers.push("https://www.arcgis.com");
+        esriConfig.request.trustedServers.push("https://www.euclideon.com");
+        esriConfig.request.trustedServers.push("http://localhost");
+        esriConfig.request.trustedServers.push("http://localhost:8000");
+
         // Set up the external renderer
         const udSDKRenderer = {
           // Input data
@@ -660,7 +652,7 @@
           title: "Traffic Lights in City of Melbourne",
           popupEnabled: true,
           popupTemplate: {
-            title: "Light #{SITE_NO}",
+            title: "Traffic Light #{SITE_NO}",
             content: [
             {
               type: "fields",
@@ -798,6 +790,7 @@
 
           // Move the camera to view Australia.
           moveCameraToAus(view);
+          tryAutoLogin(view);
         });
 
         // Install our external renderer
@@ -890,7 +883,7 @@
       <div class="loader"></div>
       <span>Loading...</span>
     </div>
-    <div class="loginBox" id="loginBox">
+    <div class="loginBox" id="loginBox" style="display: none;">
       <table>
         <h2>Euclideon Login</h2>
         <tr><td><label for="usernameTxt">Email: </label></td>
@@ -904,7 +897,7 @@
     <div class="options" id="options">
       <b>Options</b><br/><br/>
       <input type="checkbox" id="bfprint" name="bfprint" onclick="turnBuildingsOnOff()" checked>Buildings<br/>
-      <input type="checkbox" id="flights" name="flights" onclick="turnLightsOnOff()" checked>Lights<br/>
+      <input type="checkbox" id="flights" name="flights" onclick="turnLightsOnOff()" checked>Traffic Lights<br/>
       <input type="checkbox" id="tcanopies" name="tcanopies" onclick="turnTreesOnOff()" checked>Tree Canopies<br/>
       <input type="checkbox" id="udsmodels" name="udsmodels" onclick="turnUDSModelOnOff()" checked>UDS Models<br/>
       <p id="res">UDS Model <br/>Resolution: <b>Normal</b></p>
@@ -918,13 +911,34 @@
       <a href="https://www.euclideon.com/udsdk/#udstream-nav-demo" rel="noopener noreferrer">Go Back</a>
     </div>
     <script>
+      function tryAutoLogin(view)
+      {
+        var status = udSDKJS_Domain("Esri ArcScene");
+        if (status == 0)
+        {
+          console.log("udSDKJS Logged in.");
+
+          udSDKJSReady = 2;
+          document.getElementById("loginBox").style.display = "none";
+          document.getElementById("statusLoading").style.display = "none";
+
+          // From loadModel.js
+          unload_LoadUDSModel("Melbourne");
+          // From cameraControl.js
+          flyCamera(view, "Melbourne", 5.0);
+        }
+        else
+        {
+          document.getElementById("loginBox").style.display = "block";
+          setTimeout(() => {
+            document.getElementById("statusLoading").style.display = "none";
+          }, 1000)
+        }
+      }
+
       function CreateVDKPlugin()
       {
         udSDKJSReady = 1;
-        document.getElementById("loginBox").style.display = "block";
-        setTimeout(() => {
-          document.getElementById("statusLoading").style.display = "none";
-        }, 1000)
       };
 
       function LoginVDKPlugin(username, password)
